#15 - Allowing multiple stop filters. Closes #15.
